--- a/compiler/.project
+++ b/compiler/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sugarj-compiler-editor-services</name>
+	<name>org.sugarj.compiler</name>
 	<comment></comment>
 	<projects>
 	</projects>
