--- a/compiler/build.properties
+++ b/compiler/build.properties
@@ -2,4 +2,5 @@ source.. = .
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               make_permissive.jar
+               make_permissive.jar,\
+               commons-cli-1.2.jar
