--- a/compiler/.classpath
+++ b/compiler/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path=""/>
 	<classpathentry exported="true" kind="lib" path="make_permissive.jar"/>
 	<classpathentry exported="true" kind="lib" path="commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="commons-collections-3.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
