--- a/compiler/build.properties
+++ b/compiler/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                make_permissive.jar,\
-               commons-cli-1.2.jar
+               commons-cli-1.2.jar,\
+               commons-collections-3.2.1.jar
