--- a/compiler/.classpath
+++ b/compiler/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="lib" path="make_permissive.jar"/>
 	<classpathentry exported="true" kind="lib" path="commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="/Users/seba/svn-strategoxt/spoofax-imp/trunk/org.strategoxt.imp.nativebundle/bin"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
