explicit SugarJ builder; parser does not build anymore. Activate builder by replacing "org.eclipse.jdt.core.javabuilder" with "org.sugarj.editor.SugarJBuilder" in your project's .project file
git-svn-id: https://svn.strategoxt.org/repos/StrategoXT/sugarj/trunk@23307 ba653a0a-7fb7-0310-a048-973b18a224e4

--- a/editor/plugin.xml
+++ b/editor/plugin.xml
@@ -8,5 +8,16 @@
        <extension id="org.sugarj.editor.parser" name="SugarJ Parser" point="org.eclipse.imp.runtime.parser">
           <parser class="org.sugarj.editor.SugarJParseController" language="SugarJ">
           </parser>
+       </extension>
+       <extension
+             id="SugarJBuilder"
+             name="SugarJ builder"
+             point="org.eclipse.core.resources.builders">
+          <builder>
+	         <run class="org.sugarj.builder.Builder">
+	            <parameter name="optimize" value="true"/>
+	            <parameter name="comment" value="SugarJ Builder"/>
+	         </run>
+          </builder>
        </extension>    
     </plugin>
