--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 !/test-workspace/.metadata/.plugins
 /test-workspace/.metadata/.plugins/*
 
-!/test-workspace/.metadata/.plugins/org.eclipse.core.resources
-/test-workspace/.metadata/.plugins/org.eclipse.core.resources/*
-!/test-workspace/.metadata/.plugins/org.eclipse.core.resources/.projects
+#!/test-workspace/.metadata/.plugins/org.eclipse.core.resources
+#/test-workspace/.metadata/.plugins/org.eclipse.core.resources/*
+#!/test-workspace/.metadata/.plugins/org.eclipse.core.resources/.projects
 
 
 !/test-workspace/.metadata/.plugins/org.eclipse.ui.workbench
