Created a java-dependent language library

--- a/stdlib/build.properties
+++ b/stdlib/build.properties
@@ -1,4 +1,7 @@
 source.. = .
 output.. = .
 bin.includes = META-INF/,\
-               .
+               .,\
+               org/sugarj/languages/,\
+               org/sugarj/transformations/
+
