Extracted language-specific features from StdLib to LanguageLib, created java-specific language library JavaLib, modified SDFCommands and STRCommands to use paths specified in language library

--- a/stdlib/build.properties
+++ b/stdlib/build.properties
@@ -3,5 +3,6 @@ output.. = .
 bin.includes = META-INF/,\
                .,\
                org/sugarj/languages/,\
-               org/sugarj/transformations/
+               org/sugarj/transformations/,\
+               org/sugarj/stdlib/StdTrans.str
 
