--- a/javalib/build.properties
+++ b/javalib/build.properties
@@ -1,4 +1,5 @@
 source.. = src/
 bin.includes = META-INF/,\
                .,\
-               src/org/sugarj/java/
+               src/org/sugarj/java/,\
+               src/org/sugarj/languages/
