--- a/feature-java/.project
+++ b/feature-java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.sugarj.feature</name>
+	<name>feature-java</name>
 	<comment></comment>
 	<projects>
 	</projects>
