--- a/compiler/build.properties
+++ b/compiler/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                make_permissive.jar,\
                commons-cli-1.2.jar,\
-               commons-collections-3.2.1.jar
+               commons-collections-3.2.1.jar,\
+               plugin.xml
