language plugins for Java and Prolog

--- a/javalib/build.properties
+++ b/javalib/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 bin.includes = META-INF/,\
                .,\
                src/org/sugarj/java/,\
-               src/org/sugarj/languages/
+               src/org/sugarj/languages/,\
+               plugin.xml
