build as folder marked in feature.xml

--- a/stdlib/build.properties
+++ b/stdlib/build.properties
@@ -1,8 +1,14 @@
 source.. = .
-output.. = .
+output.. = bin/
 bin.includes = META-INF/,\
                .,\
                org/sugarj/languages/,\
                org/sugarj/transformations/,\
-               org/sugarj/stdlib/StdTrans.str
+               org/sugarj/stdlib/StdTrans.str,\
+               org/sugarj/stdlib/Common.def,\
+               org/sugarj/stdlib/StdLib.java
+src.includes = org/sugarj/languages/,\
+               org/sugarj/stdlib/Common.def,\
+               org/sugarj/stdlib/StdTrans.str,\
+               org/sugarj/transformations/
 
