--- a/javalib/build.properties
+++ b/javalib/build.properties
@@ -1,6 +1,6 @@
 source.. = src/
+output.. = .
 bin.includes = META-INF/,\
                .,\
-               src/org/sugarj/java/,\
-               src/org/sugarj/languages/,\
-               plugin.xml
+               plugin.xml,\
+               src/
