rename language-library projects

--- a/language-libraries/haskell/.project
+++ b/language-libraries/haskell/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>haskelllib</name>
+	<name>haskell</name>
 	<comment></comment>
 	<projects>
 	</projects>
