--- a/editor/.project
+++ b/editor/.project
@@ -3,6 +3,7 @@
 	<name>org.sugarj.editor</name>
 	<comment></comment>
 	<projects>
+		<project>jsglr-layout</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
