--- a/test-workspace/fosd-graphPL/.classpath
+++ b/test-workspace/fosd-graphPL/.classpath
@@ -2,11 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/features-mdd">
-		<accessrules>
-			<accessrule kind="accessible" pattern="variability/**"/>
-			<accessrule kind="nonaccessible" pattern="**"/>
-		</accessrules>
-	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/fosd"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
