--- a/compiler/.classpath
+++ b/compiler/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry exported="true" kind="lib" path="commons-cli-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="commons-collections-3.2.1.jar"/>
 	<classpathentry kind="lib" path="strategoxt.jar"/>
+	<classpathentry kind="lib" path="/home/florenz/sw/opt/eclipse/plugins/org.strategoxt.imp.nativebundle_0.1.1.201210091800"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
