use caching for typesmart syntax

--- a/common/build.properties
+++ b/common/build.properties
@@ -1,4 +1,6 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               ehcache-core-2.6.6.jar,\
+               slf4j-api-1.6.1.jar
