--- a/common/build.properties
+++ b/common/build.properties
@@ -3,5 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                ehcache-core-2.6.6.jar,\
-               slf4j-api-1.6.1.jar,\
-               slf4j-jdk14-1.6.1.jar
+               slf4j-jdk14-1.6.1.jar,\
+               slf4j-api-1.6.1.jar
